[gd_scene load_steps=3 format=3 uid="uid://darmory8f3nw5pe"]

[ext_resource type="Script" path="res://scripts/ui/armory_menu.gd" id="1_armory"]
[ext_resource type="Texture2D" uid="uid://c5qm16rfltop" path="res://assets/sprites/weapons/m16_rifle.png" id="2_m16"]

[node name="ArmoryMenu" type="CanvasLayer"]
layer = 101
process_mode = 2
script = ExtResource("1_armory")

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Armory"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_vertical = 3

[node name="WeaponGrid" type="GridContainer" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 3

[node name="StatusLabel" type="Label" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Back"
